cambios agreugé más texto

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     Prueba resistente al agua para dar un contenido a este html
+    A este punto ya estamos en la prueba final de conexión con githug osí osí.
 </body>
 </html>
